# pytab-2026

./: .gitignore
lezioni/: L05.ipynb  L06.ipynb
lezioni/L06/: Pandas.ipynb  StdLib.ipynb  docenti.html  pyproject.toml
lezioni/chiedove-unimi-santini/: README.md  pyproject.toml
lezioni/chiedove-unimi-santini/src/chiedove_unimi/: __init__.py
sito/docs/: index.md
