[project]
name = "chiedove-unimi"
version = "0.1.0"
description = "Estrazione dei dati di contatto dal sito UniMI"
readme = "README.md"
authors = [
    { name = "Massimo Santini", email = "santini@di.unimi.it" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4==4.14.3",
    "requests==2.34.0",
]

[project.scripts]
chiedove-unimi = "chiedove_unimi:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
